Added a cookie image and updated tesr html with additional elements

--- a/test.html
+++ b/test.html
@@ -1,3 +1,13 @@
-<h1>Hey, im a big heading </h1>
-<p>Im a paragraph element</p>
-<a href="http://google.com"target= "_blank" title= "Lets go to google">Click me! Im a link! </a>
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Cookies!</title>
+</head>
+<body>
+	<h1>Hey, im a big heading </h1>
+	<p>Im a <b>paragraph</b> element</p>
+	<a href="http://google.com" target="_blank" title="Lets go to google">Click me! Im a link! </a>
+	<p>My name is. <br> Cookie monster<p/>
+	<img src="img/cakes.jpg">
+</body>
+</html>
